# fastapi_endpoints_neondb

./: pyproject.toml
fastapi_endpoints_neondb/: main.py  settings.py
tests/: test_main.py
