[tool.poetry]
name = "fastapi-endpoints-neondb"
version = "0.1.0"
description = ""
authors = ["saqibmurtaza <saqibmurtazakhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlmodel = "^0.0.16"
psycopg2-binary = "^2.9.3"  # Add this line for psycopg2-binary
pytest = "^8.0.2"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
